--- a/css/common.css
+++ b/css/common.css
@@ -12,9 +12,13 @@ body {
   color: #212121;
   line-height: 1.5;
 }
-ul {
+img {
+  display: block;
+}
+ul, li {
   list-style: none;
   padding: 0;
+  margin: 0;
 
 }
 .gallery {
@@ -25,12 +29,16 @@ ul {
   row-gap: 48px;
   align-items: center;
   margin: 100px 156px 100px 156px;
+  max-width: 1128px;
+}
+
+.gallery li {
+  max-width: calc((100% - 48px) / 3);
+  
 }
 
 .gallery img {
   height: 300px;
-  width: calc((100% - 48px) / 3);
-  
 }
 .input-name {
   width: 360px;
